2009-08-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/cc-vars.el (c-comment-continuation-stars):
	* progmodes/cc-engine.el (c-looking-at-bos):
	* progmodes/cc-cmds.el (c-toggle-auto-state)
	(c-forward-into-nomenclature, c-backward-into-nomenclature)
	(c-comment-line-break-function): Add version of obsolescence.

2009-08-28  Juri Linkov  <juri@jurta.org>

	* files.el (magic-fallback-mode-alist): Add ZIP magic number
	associated with `archive-mode'.

	* image.el (image-type-header-regexps): Use only JPEG magic number
	to determine JPEG images, and don't use `image-jpeg-p' because
	Emacs can display non-JFIF non-Exif JPEG images.

2009-08-28  Juanma Barranquero  <lekktu@gmail.com>

	* arc-mode.el (archive-mode):
	* emacs-lisp/re-builder.el (re-builder-unload-function):
	Protect against the default value of `major-mode' being nil.

2009-08-28  Juanma Barranquero  <lekktu@gmail.com>

	* international/ucs-normalize.el (ucs-normalize-sort, quick-check-list):
	Fix typos in docstrings.

	* progmodes/js.el (js--macro-decl-re): Doc fix.
	(js--plain-method-re, js--split-name): Refloc docstring.
	(js--class-styles, js--make-merged-item, js--splice-into-items):
	Fix typos in docstrings; reflow docstrings.
	(js--maybe-join, js--function-prologue-beginning, js--flush-caches)
	(js--variable-decl-matcher, js--inside-pitem-p)
	(js--parse-state-at-point, js--get-all-known-symbols)
	(js--symbol-history, js-find-symbol, js--js-references)
	(js--moz-interactor, js--js-encode-value, js--read-tab):
	Fix typos in docstrings.

2009-08-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* textmodes/reftex.el (reftex-get-file-buffer-force):
	* progmodes/verilog-mode.el (verilog-batch-execute-func):
	* emulation/viper.el (viper-go-away, viper-set-hooks):
	* emacs-lisp/re-builder.el (re-builder-unload-function):
	* emacs-lisp/bytecomp.el (byte-compile-file):
	* ses.el (ses-unload-function):
	* hexl.el (hexl-find-file):
	* files.el (normal-mode):
	* ehelp.el (with-electric-help):